# CMakeCommonSetup

./: .gitignore  CMakeCS.in.cmake  CMakeLists.txt  LICENSE  Project.CMakeCS.cmake  Project.CMakeCS.cmakecs  README.md  Target.TestWrapper.cmake  Target_TestWrapper.cmake
Examples/InProject/: CMakeLists.txt
Examples/ModuleLike/: CMakeLists.txt  MyOptions.cmake  Project.MyProject.cmake  Target.MyApp.cmake  Target.MyMainLib.cmake
TestExternal/: CMakeLists.txt
TestExternal/DepCheck/: CMakeLists.txt  Project-DepCheck.cmake
cmake/: CMakeCS.cmake  cmakecs_add_target.cmake  cmakecs_common_cmake_options.cmake  cmakecs_component.cmake  cmakecs_create_config_files.cmake  cmakecs_create_config_version_files.cmake  cmakecs_create_find_module.cmake  cmakecs_error_if_project_locked.cmake  cmakecs_error_if_project_not_init.cmake  cmakecs_executable.cmake  cmakecs_finalize_project.cmake  cmakecs_get_toplevel_project_info.cmake  cmakecs_init_project.cmake  cmakecs_parse_arguments_helpers.cmake  cmakecs_project.cmake  cmakecs_project_options.cmake  cmakecs_project_properties.cmake  cmakecs_sanetize_input.cmake  cmakecs_small_macros_and_functions.cmake  cmakecs_target_options.cmake  cmakecs_test.cmake  cmakecs_write_basic_config_file.cmake
cmake/modules/: FindVCPKG.cmake
targets/: Clang_GCC_CompilerWarnings.cmakecs  CompilerWarnings.cmakecs  DummyTarget.cmakecs  GTestWrapper.cmakecs  Intel_CompilerWarnings.cmakecs  MSVC_CompilerWarnings.cmakecs
testdummies/: CMakeLists.txt  README
testdummies/dummy/: CMakeLists.txt
testdummies/dummy/include/: dummy.h
testdummies/dummy2/: CMakeLists.txt
testdummies/dummy3/: CMakeLists.txt
testdummies/dummy3/dummy/: CMakeLists.txt
testdummies/dummy3/dummy/src/: dummy.cpp
testdummies/dummy3/src/: dummy_private.h
vcpkg/port/: CONTROL  portfile.cmake
